--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,8 @@ AUTOMAKE_OPTIONS = foreign
 
 ACLOCAL_AMFLAGS = -I m4
 
+EXTRA_DIST = README.md LICENSE
+
 SUBDIRS = src
 
 # DIST_SUBDIRS = src include
