--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@ AUTOMAKE_OPTIONS = foreign
 
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = README.md LICENSE
+EXTRA_DIST = README.md LICENSE version.sh
 
 SUBDIRS = src
 
