--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_INIT([fpt-dds],[m4_esyscmd_s([git describe --always --abbrev=4 --dirty])],[alexis.paz@gmail.com])
+AC_INIT([fpt-dds],m4_esyscmd_s(./version.sh),[alexis.paz@gmail.com])
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR(src/)
